fix alignment of items in navbar

--- a/public/CSS/menubar.css
+++ b/public/CSS/menubar.css
@@ -25,12 +25,9 @@
 
 .menuItems {
     grid-area: item;
-
-    /*margin: auto;*/
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+
 }
 .menuFooter {
     grid-area: footer;
@@ -60,8 +57,9 @@
     font: var(--navText);
     color: var(--blueNeutral);
     text-decoration: none;
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
     padding: 24px;
 
 }
